<resources>
    <string name="app_name" translatable="false">CovidCheckList</string>
    <string name="title_activity_test" translatable="false">TestAc</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_india" translatable="false">India</string>
    <string name="title_world" translatable="false">World</string>
    <string name="question_1">Do you have cough?</string>
    <string name="question_2">Do you have cold?</string>
    <string name="question_3">Are you having Diarrhea?</string>
    <string name="question_4">Are you have sore throat?</string>
    <string name="question_5">Are you experiencing Body Aches?</string>
    <string name="question_6">Do you have headache?</string>
    <string name="question_7">Do you have fever (body temperature more than 37.8 degree C)?</string>
    <string name="question_8">Are you having difficulty in breathing?</string>
    <string name="question_9">Are you experiencing Fatigue?</string>
    <string name="question_10">Have you traveled recently during the past 14 days?</string>
    <string name="question_11">Do you have a travel history to COVID-19 infected area?</string>
    <string name="question_12">Do you have direct contact or is taking care of a positive COVID-19 patient?</string>
    <string name="score_result_1">May be stress related and observe.</string>
    <string name="score_result_2">Hydrate properly and proper personal hygiene. Observe and Re-evaluate after 2 days.</string>
    <string name="score_result_3">Seek a consultation with Doctor.</string>
    <string name="score_result_4">Please consult to doctor immediately</string>
    <string name="india_whatsapp_url" translatable="false"><![CDATA[https://api.whatsapp.com/send?phone=919013151515&text=Namaste&source=&data=]]></string>
    <string name="who_whatspp_url" translatable="false"><![CDATA[https://api.whatsapp.com/send?phone=41794752209&text=hi&source=&data=]]></string>
    <string name="india_toll_free_helpline" translatable="false">1075</string>
    <string name="india_helpline" translatable="false">+91-11-23978046</string>
    <string name="ministry_of_heath_website_url" translatable="false">https://www.mohfw.gov.in/</string>
    <string name="who_website_url" translatable="false">https://www.who.int/emergencies/diseases/novel-coronavirus-2019</string>
    <string name="india_youtube_1" translatable="false">https://www.youtube.com/watch?v=UEfCxCLtOwk</string>
    <string name="who_youtube_1" translatable="false">https://youtu.be/1APwq1df6Mw</string>
    <string name="who_youtube_2" translatable="false">https://youtu.be/mOV1aBVYKGA</string>
    <string name="india_email_1" translatable="false">ncov2019@gov.in</string>
    <string name="india_email_2" translatable="false">ncov2019@gmail.com</string>
    <string name="how_to_protect_yourself_from_corona_virus" translatable="false">How to protect yourself from corona virus</string>
    <string-array name="languages">
        <item>English</item>
        <item>हिन्दी</item>
        <item>मराठी</item>
        <item>ગુજરાતી</item>
    </string-array>
    <string name="india_youtube_video1_id" translatable="false">UEfCxCLtOwk</string>
    <string name="who_youtube_video1_id" translatable="false">1APwq1df6Mw</string>
    <string name="who_youtube_video2_id" translatable="false">mOV1aBVYKGA</string>
    <string name="check_corona_probability">Check Corona Probability</string>
    <string name="check_now">Check now</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="recommendation">Recommendation</string>
    <string name="corona_probability">Corona Probability</string>
    <string name="youtube_videos" translatable="false">Youtube Videos</string>
    <string name="emails" translatable="false">Emails</string>
    <string name="faq_pdf" translatable="false">FAQ PDF</string>
    <string name="disclaimer" translatable="false">Disclaimer</string>
    <string name="disclaimer_msg" translatable="false">The tool is for informational purposes only, and is not intended to replace the advise of a medical professional.</string>
    <string name="agree" translatable="false">I am agree</string>
</resources>
