<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dharampravin.covidchecklist.ui.home.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_india"
        android:name="com.dharampravin.covidchecklist.ui.india.view.IndiaFragment"
        android:label="@string/title_india"
        tools:layout="@layout/fragment_india" />

    <fragment
        android:id="@+id/navigation_world"
        android:name="com.dharampravin.covidchecklist.ui.world.view.WorldFragment"
        android:label="@string/title_world"
        tools:layout="@layout/fragment_world" />
</navigation>
