<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.india.view.IndiaFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="Ministry of Health Whatsapp Contact "
            android:textSize="16dp"
            android:id="@+id/tv_moh_india_whatsapp_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:autoLink="web"
            app:layout_constraintTop_toBottomOf="@+id/tv_moh_india_whatsapp_lable"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/india_whatsapp_url"
            android:id="@+id/tv_moh_india_whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:text="Toll Free no."
            app:layout_constraintTop_toBottomOf="@+id/tv_moh_india_whatsapp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/tv_toll_free_no_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textStyle="bold"
            android:textSize="24dp"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_toll_free_no_label"
            app:layout_constraintTop_toTopOf="@+id/tv_toll_free_no_label"
            android:text="1075"
            android:autoLink="phone"
            android:id="@+id/tv_toll_free_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_marginTop="32dp"
            android:text="Helpline no."
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_toll_free_no_label"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/tv_helpline_no_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textStyle="bold"
            android:textSize="24dp"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_helpline_no_label"
            app:layout_constraintTop_toTopOf="@+id/tv_helpline_no_label"
            android:text="+91-11-23978046"
            android:autoLink="phone"
            android:id="@+id/tv_help_line_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/tv_helpline_no_label"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="Minisitry of health Website : "
            android:id="@+id/tv_moh_website_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:ellipsize="marquee"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_moh_website_label"
            app:layout_constraintTop_toTopOf="@id/tv_moh_website_label"
            android:autoLink="web"
            android:text="@string/ministry_of_heath_website_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/emails"
            app:layout_constraintTop_toBottomOf="@+id/tv_moh_website_label"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:id="@+id/tv_moh_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:autoLink="email"
            android:layout_marginTop="16dp"
            android:text="@string/india_email_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_moh_email_label"
            android:id="@+id/tv_moh_email_1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:autoLink="email"
            android:layout_marginLeft="32dp"
            android:text="@string/india_email_2"
            app:layout_constraintTop_toTopOf="@id/tv_moh_email_1"
            app:layout_constraintLeft_toRightOf="@id/tv_moh_email_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_moh_email_1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/youtube_videos"
            android:id="@+id/tv_moh_youtube_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_moh_youtube"
            app:layout_constraintTop_toBottomOf="@+id/tv_moh_youtube_label"
            android:src="@drawable/togather_we_figth_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            app:layout_constraintTop_toTopOf="@id/iv_moh_youtube"
            app:layout_constraintBottom_toBottomOf="@id/iv_moh_youtube"
            app:layout_constraintLeft_toLeftOf="@id/iv_moh_youtube"
            app:layout_constraintRight_toRightOf="@id/iv_moh_youtube"
            android:src="@drawable/ic_play_circle_white"
            android:id="@+id/iv_play_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_moh_youtube"
            android:text="@string/faq_pdf"
            android:id="@+id/tv_moh_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            app:layout_constraintTop_toBottomOf="@id/tv_moh_pdf"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_pdf"
            android:id="@+id/iv_moh_pdf"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <Space
            app:layout_constraintTop_toBottomOf="@id/iv_moh_pdf"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="50dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

